# Tetris

./: .gitignore  README.md  block.py  board.py  pyproject.toml  settings.py  tetris.py
