[project]
name = "tetris"
version = "1.0"
description = "Game Tetris"
authors = [
    {name = "AlexLoner",email = "lukyanov9567@gmail.com"}
]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
